# veritas

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  action.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: audit-action.yml  ci.yml  docker.yml
demos/loco_epi/: manifest.toml
demos/ppi_bushuiev/: manifest.toml
demos/proteingym_dms/: manifest.toml
demos/regulatory_dna_gosai/: manifest.toml
demos/regulatory_dna_hashfrag/: manifest.toml
docs/: PLAN.md  SPEC.md  api.md  detectors.md  index.md  limitations-and-guarantees.md  usage.md  validation.md
examples/quickstart/: config.json  eval.fasta  graph.json  reference.fasta  table.csv
scripts/: export_report_schema.py  fetch_demo_data.py  generate_demo_fixtures.py  setup-binaries.sh
src/veritas/: __init__.py  config.py
src/veritas/audit/: __init__.py  gate.py  io_helpers.py  orchestrator.py  pipeline_steps.py  runners.py
src/veritas/cli/: __init__.py  app.py
src/veritas/contamination/: __init__.py  base.py  cache.py  compose.py  executables.py  family.py  graph.py  hits.py  prefilter.py  registry.py  sequence_identity.py  structural.py  subprocess_runner.py
src/veritas/contracts/: __init__.py  audit_config.py  audit_inputs.py  base.py  benchmark.py  contamination.py  enums.py  eval_item.py  predictions.py  provenance.py  reference_item.py  report.py  sequences.py  structure.py
src/veritas/demos/: __init__.py  _tabular.py  fetch.py  locked_reports.py  manifest.py  overfitnn.py  ppi.py  proteingym.py  regulatory_dna.py
src/veritas/io/: __init__.py  _tables.py  adapters.py  fasta.py  loaders.py  predictions_io.py  splits.py
src/veritas/mcp/: __init__.py  serialization.py  server.py  tools.py
src/veritas/metrics/: __init__.py  auprc.py  auroc.py  bootstrap.py  classification.py  correlation.py  deleak.py  errors.py  honest.py  registry.py  result.py
src/veritas/provenance/: __init__.py  audit_hash.py  canonical.py  hashing.py  record.py  tool_versions.py
src/veritas/report/: __init__.py  _context.py  figures.py  html_report.py  json_report.py  limitations.py  markdown_report.py  model.py  numbers.py
src/veritas/stratify/: __init__.py  axes.py  binning.py  curves.py  silent_failure.py
tests/: conftest.py  factories.py  test_action.py  test_ci_config.py  test_config.py  test_import_isolation.py  test_packaging.py  test_smoke.py
tests/audit/: __init__.py  test_orchestrator.py  test_pipeline_steps.py
tests/cli/: __init__.py  test_cli_audit.py  test_cli_subcommands.py
tests/contamination/: test_backends_parsers.py  test_base.py  test_cache.py  test_compose.py  test_executables.py  test_family_binary.py  test_family_detector.py  test_foldseek_backend.py  test_graph.py  test_prefilter.py  test_properties.py  test_registry.py  test_runtime_versions.py  test_sequence_binary.py  test_sequence_detector.py  test_structural_binary.py  test_structural_detector.py  test_subprocess_runner.py
tests/contracts/: test_audit_config.py  test_audit_inputs.py  test_benchmark.py  test_contamination.py  test_enums.py  test_eval_item.py  test_predictions.py  test_provenance_schema.py  test_reference_item.py  test_report.py
tests/demos/: test_adapters.py  test_fetch.py  test_manifest.py  test_overfitnn.py  test_real_manifests.py
tests/docs/: test_docs_build.py
tests/e2e/: __init__.py  test_demo_dna.py  test_demo_ppi.py  test_demo_protein.py  test_e2e_golden.py  test_external_repro_genomic.py  test_external_repro_overfitnn.py  test_external_repro_protein.py
tests/fixtures/contamination/: family_seed.afa
tests/io/: test_adapters.py  test_fasta.py  test_loaders.py  test_predictions_io.py  test_splits.py
tests/mcp/: __init__.py  test_cli_mcp_parity.py  test_server_smoke.py  test_tools.py
tests/metrics/: test_bootstrap.py  test_deleak.py  test_honest_edge_cases.py  test_honest_golden.py  test_honest_specificity.py  test_metrics_differential.py  test_metrics_edge_cases.py  test_metrics_golden.py  test_properties.py  test_registry.py
tests/provenance/: test_audit_hash.py  test_canonical.py  test_hashing.py  test_record.py  test_versions.py
tests/report/: __init__.py  test_audit_hash.py  test_cross_format_numbers.py  test_demo_fixtures.py  test_figures.py  test_html_self_contained.py  test_limitations.py  test_provenance_completeness.py  test_report_kinds.py  test_report_status_rendering.py  test_schema_export.py  test_snapshot_html.py  test_snapshot_json.py  test_snapshot_md.py
tests/report/fixtures/: report.json  report.md
tests/scale/: __init__.py  test_scale_10k.py
tests/stratify/: __init__.py  test_axes_golden.py  test_binning.py  test_categorical_curves.py  test_curves.py  test_properties.py  test_stratify_edge_cases.py  test_stratify_golden.py  test_stratify_specificity.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.gate.json  tsconfig.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/docs/: page.tsx
web/app/report/: page.tsx
web/components/: ErrorBoundary.tsx  Footer.tsx  Reveal.tsx  ui.tsx
web/components/docs/: Toc.tsx
web/fixtures/: ppi_interface.json  proteingym_msa_depth.json  r2_reverse_complement.json  r3_chr8_chr9.json  r3_random.json
web/lib/: audit-report.ts  canonical.ts  fixtures.ts  format.ts  report-schema.json  useCountUp.ts  useVerify.ts  validate.ts  verify.ts
web/test/: canonical.test.ts  hash.test.ts  schema.test.ts
(+23 files in other folders)
